examples/test/testpolicy7652.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7652
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key38: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value22
      podSelector:
        matchLabels:
          key33: value8
          key14: value28
          key24: value37
